--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "@dcloudio/uni-components": "3.0.0-3080720230703001",
     "@dcloudio/uni-h5": "3.0.0-3080720230703001",
     "@dcloudio/uni-mp-alipay": "3.0.0-3080720230703001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-baidu": "^0.0.857",
     "@dcloudio/uni-mp-jd": "3.0.0-3080720230703001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-kuaishou": "^2.0.0",
     "@dcloudio/uni-mp-lark": "3.0.0-3080720230703001",
     "@dcloudio/uni-mp-qq": "3.0.0-3080720230703001",
     "@dcloudio/uni-mp-toutiao": "3.0.0-3080720230703001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-weixin": "^0.0.973",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3080720230703001",
     "uview-ui": "^2.0.36",
     "vue": "3.2.47",
@@ -65,7 +65,7 @@
     "@vue/tsconfig": "^0.1.3",
     "sass": "^1.64.2",
     "typescript": "^4.9.4",
-    "vite": "4.1.4",
+    "vite": "^4.4.8",
     "vue-tsc": "^1.0.24"
   }
 }
